--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "^5.0.0",
     "react-sortablejs": "^6.1.4",
     "typescript": "^4.1.3",
+    "uuid": "^9.0.1",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/cli": "5.6.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.35.0",
